# xqlite

./: .formatter.exs  .gitignore  .iex.exs  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE.md  README.md  REVIEW_AXES.md  REVIEW_LEDGER.md  mix.exs
binary_crossing/: edges.exs  probe.exs  run.sh
cancellation/: crash_control.exs  hang_control.exs  latency.exs  overhead.exs  probe_common.exs  race.exs  reuse.exs  run.sh  teardown.exs
concurrency/: busy.exs  check_db.exs  churn.exs  hammer.exs  hang_control.exs  orphan_txn.exs  owner_hold.exs  owner_verify.exs  probe_common.exs  run.sh
config/: config.exs  dev.exs  test.exs
durability/: harness_common.exs  inject_delete.exs  inject_tamper.exs  run.sh  verify.exs  writer.exs
error_contract/: probe.exs  run.sh
feature_islands/: busy_elapsed.exs  run.sh
guides/: full_text_search.md  gotchas.md  security.md  spatialite.md  wiring_telemetry.md
hot_upgrade/: probe.exs  run.sh
lib/: xqlite.ex
lifecycle/: hostile_drops.exs  leak_children.exs  leak_conn.exs  probe_common.exs  run.sh
native/xqlitenif/: .rustfmt.toml  Cargo.toml  README.md
native/xqlitenif/.cargo/: config.toml
native/xqlitenif/miri/: Cargo.toml
native/xqlitenif/miri/src/: main.rs
native/xqlitenif/src/: atoms.rs  authorizer.rs  blob.rs  busy_handler.rs  cancel.rs  close.rs  commit_hook.rs  connection.rs  constraint_parse.rs  error.rs  exec.rs  explain_analyze.rs  hook_util.rs  lib.rs  log_hook.rs  nif.rs  open.rs  pragma.rs  pragma_get.rs  pragma_put.rs  progress_dispatch.rs  query.rs  r2d2.rs  rollback_hook.rs  schema.rs  session.rs  shared.rs  statement.rs  stream.rs  transaction.rs  update_hook.rs  util.rs  wal_hook.rs
scheduler/: probe.exs  run.sh
scripts/: release.sh
test/: config_test.exs  conn_test.exs  explain_analyze_test.exs  introspection_wrappers_test.exs  nif_test.exs  open_opts_test.exs  pragma_test.exs  result_test.exs  schema_default_value_property_test.exs  schema_default_value_test.exs  schema_introspection_test.exs  strict_table_test.exs  telemetry_open_telemetry_test.exs  telemetry_test.exs  telemetry_test_support_test.exs  test_helper.exs  type_extension_decimal_test.exs  type_extension_instant_duration_test.exs  type_extension_json_test.exs  type_extension_query_test.exs  type_extension_test.exs  type_extension_uuid_test.exs  xqlite_test.exs  (+5 more)
(+97 files in other folders)
