[package]
name = "xqlitenif"
version = "0.2.0"
authors = ["Dimitar Panayotov <mitko.p@gmail.com>"]
edition = "2018"

[lib]
name = "xqlitenif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.37.0", features = [
  "buildtime_bindgen",
  "hooks",
  "modern_sqlite",
] }
rustler = { version = "0.37.0" }

[profile.release]
lto = true
codegen-units = 1
