[package]
name = "xqlitenif"
version = "0.6.0"
authors = ["Dimitar Panayotov <mitko.p@gmail.com>"]
edition = "2024"

[lib]
name = "xqlitenif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.39.0", features = [
  "backup",
  "blob",
  "bundled",
  "hooks",
  "load_extension",
  "modern_sqlite",
  "serialize",
  "session",
  "trace",
] }
rustler = { version = "0.37.3", default-features = false, features = ["nif_version_2_15"] }

[features]
default = ["nif_version_2_17"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[profile.release]
lto = true
codegen-units = 1
